--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@ button:focus {
 .AccentTextColor{
   color: #e771d8;
 }
+.WhiteTextColor{
+  color: #fff;
+}
 /*generic misc*/
 .MassiveText{
     font-size: 20vmin;
@@ -67,7 +70,13 @@ button:focus {
     font-size: 2vmin;
 }
 .Fade{
+  opacity: 0.75;
+}
+.Fade1{
   opacity: 0.5;
+}
+.Fade2{
+  opacity: 0.25;
 }
 .footer{
   height:25%;
@@ -93,6 +102,9 @@ button:focus {
   padding-bottom: 10px;
   box-shadow: 0px 10px rgba(140,140,140,0.5);
   position: relative;
+  background-image: url("./TitlePageBackground.png");
+  background-repeat: no-repeat;
+    background-color: #131418;
 }
 #projectsNavDiv{
   height: 30%;
@@ -100,7 +112,7 @@ button:focus {
 .Parentheses{
   font-size: 20vmin;
   position: absolute;
-  opacity: 0.5;
+  opacity: 0.25;
 }
 #openParentheses{
   margin-left:3%;
