--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+.hidden{
+  display: none;
+}
+html:not(.hidden){
+  display: block;
+}
 body{
   font-family: 'Bree Serif', serif !important;
   cursor: default;
@@ -24,32 +30,40 @@ span{
 #page_content{
   padding: 0px;
   width:100%;
-  height: 500%;
+  height: 5000vh;
   background-color: #000;
   color:black;
+  transition: all 1s ease;
 }
 #page_content.light{
   background-color: #fff;
   color:black;
-  transition: color 0.5s ease;
+  transition: all 1s ease;
 }
 #page_content.dark{
   background-color: #000;
   color:white;
-  transition: color 0.5s ease;
+  transition: all 1s ease;
 }
 
-#title_div{
+#about_me_div{
   padding: 20vmin;
+}
+#skills_div{
+  position: fixed;
+  top: 10vmin;
+  bottom: 10vmin;
+  right: 20vmin;
+  left: 20vmin;
+  pointer-events: none;
+  transition: all 1s ease;
+}
 
-}
-.title_text{
-  font-size: 6em;
-}
 .opacity{
   opacity: 0.7;  /* Opacity for Modern Browsers */
   filter: alpha(opacity=70);
 }
+
 .rotate {
   width: 100vh;
   transform-origin: 0 0;
@@ -67,7 +81,22 @@ span{
   filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
 
 }
+.title_text{
+  font-size: 6em;
+}
+.textsize2{
+  font-size: 2em;
+}
+.textsize1p5{
+  font-size: 1.5em;
+}
+.textsize1{
+  font-size: 1em;
+}
 .nav-link.active{
   opacity: 0.5;  /* Opacity for Modern Browsers */
   filter: alpha(opacity=50);
+}
+.nav-link{
+  transition: all 0.3s ease;
 }
