--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,4 @@
-.hidden{
-  display: none;
-}
+
 html:not(.hidden){
   display: block;
 }
@@ -46,7 +44,7 @@ span{
 }
 
 #about_me_div{
-  padding: 20vmin;
+  height: 100vh;
 }
 #skills_div{
   position: fixed;
@@ -57,12 +55,20 @@ span{
   pointer-events: none;
   transition: all 1s ease;
 }
-
+.hidden{
+  opacity: 0.0;  /* Opacity for Modern Browsers */
+  filter: alpha(opacity=00);
+}
 .opacity{
   opacity: 0.7;  /* Opacity for Modern Browsers */
   filter: alpha(opacity=70);
 }
-
+.center {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding-left: 10vw;
+}
 .rotate {
   width: 100vh;
   transform-origin: 0 0;
@@ -82,6 +88,7 @@ span{
 }
 .title_text{
   font-size: 6em;
+  line-height: 1em;
 }
 .textsize2{
   font-size: 2em;
@@ -98,4 +105,14 @@ span{
 }
 .nav-link{
   transition: all 0.3s ease;
+}
+.nav-link:hover{
+  color:#009688;
+  opacity: 0.5;  /* Opacity for Modern Browsers */
+  filter: alpha(opacity=50);
+}
+.nav-link.active:hover{
+  color:#009688;
+  opacity: 0.25;  /* Opacity for Modern Browsers */
+  filter: alpha(opacity=25);
 }
