--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ span{
 #page_content{
   padding: 0px;
   width:100%;
-  height: 5000vh;
+  height: 500vh;
   background-color: #000;
   color:black;
 }
@@ -43,14 +43,14 @@ span{
 #about_me_div{
   height: 100vh;
 }
-#skills_div{
+#contacts_div{
   position: fixed;
   top: 10vmin;
   bottom: 10vmin;
   right: 20vmin;
   left: 20vmin;
   pointer-events: none;
-
+  transition: all 1s ease;
 }
 .hidden{
   opacity: 0.0;  /* Opacity for Modern Browsers */
@@ -104,12 +104,15 @@ span{
 .nav-link{
   transition: all 0.3s ease;
 }
-.nav-link:hover{
+.disabled{
+  cursor: not-allowed;
+}
+.nav-link:hover:not(.disabled){
   color:#009688;
   opacity: 0.5;  /* Opacity for Modern Browsers */
   filter: alpha(opacity=50);
 }
-.nav-link.active:hover{
+.nav-link.active:hover:not(.disabled){
   color:#009688;
   opacity: 0.25;  /* Opacity for Modern Browsers */
   filter: alpha(opacity=25);
