--- a/styles.css
+++ b/styles.css
@@ -25,23 +25,31 @@ span{
 #page_content{
   padding: 0px;
   width:100%;
-  height: 500vh;
+  height: 370vh;
   background-color: #000;
   color:black;
 }
 #page_content.light{
   background-color: #fff;
   color:black;
-  transition: all 1s ease;
+  transition: background-color 1s ease;
+/*  transition: color 0.5s ease;*/
 }
 #page_content.dark{
   background-color: #000;
   color:white;
-  transition: all 1s ease;
+  transition: background-color 1s ease;
+/*  transition: color 0.5s ease;*/
 }
 
 #about_me_div{
   height: 100vh;
+}
+#skills_div{
+  height: 170vh;
+  padding-left: 10vw;
+  padding-right: 10vw;
+  background-color:inherit;
 }
 #contacts_div{
   position: fixed;
@@ -50,7 +58,7 @@ span{
   right: 20vmin;
   left: 20vmin;
   pointer-events: none;
-  transition: all 1s ease;
+  transition: all 0.3s ease;
 }
 .hidden{
   opacity: 0.0;  /* Opacity for Modern Browsers */
@@ -88,6 +96,12 @@ span{
   font-size: 6em;
   line-height: 1em;
 }
+.textsize4{
+  font-size: 4em;
+}
+.textsize3{
+  font-size: 3em;
+}
 .textsize2{
   font-size: 2em;
 }
@@ -116,4 +130,27 @@ span{
   color:#009688;
   opacity: 0.25;  /* Opacity for Modern Browsers */
   filter: alpha(opacity=25);
+}
+
+.sticky_header{
+  width: 100%;
+  pointer-events: none;
+  padding-top: 5vh;
+  background-color:inherit;
+  padding-left: 5vw;
+}
+.sticky_header.stuck{
+  position: fixed;
+  top: 0;
+}
+.gap{
+  height: 20vh;
+}
+.textgrey{
+  color:#7f7f7f;
+}
+#contacts_page_background{
+  background-color: black;
+  height:100vh;
+  width: 100vw;
 }
