--- a/styles.css
+++ b/styles.css
@@ -72,8 +72,8 @@ span{
   transition: all 1s ease;
 }
 .opacity{
-  opacity: 0.7;  /* Opacity for Modern Browsers */
-  filter: alpha(opacity=70);
+  opacity: 0.7;
+  filter: alpha(opacity=70); /*for edge*/
 }
 .center {
   display: flex;
