--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ span{
 #page_content{
   padding: 0px;
   width:100%;
-  height: 390vh;
+  /*height: 390vh;*/
   background-color: #000;
   color:black;
 }
@@ -46,7 +46,7 @@ span{
   height: 100vh;
 }
 #skills_div{
-  height: 170vh;
+  padding-bottom: 20vh;
   padding-left: 10vw;
   padding-right: 10vw;
   background-color:inherit;
