--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ a{
   left: 10vw;
   transition: all 0.5s ease;
   cursor: text;
+  color:white;
 }
 #contacts_page_background{
   background-color: black;
